quartz/styles/custom.scss
@use "./base.scss";
// @use "./themes";


// When writing things in bullet points on a content page, the space between the bullets gets lost on the website. A quick fix for this.
p {
  margin-bottom: 1em !important;
}

// Custom counter style for ordered lists
@counter-style cs-extends {
  system: extends decimal;
  prefix: '';
  suffix: ') ';
}

ol {
  list-style: cs-extends !important;
}

::marker { // numbered lists
    font-weight: 900 !important; // max;
}

strong {
  font-weight: 900 !important;
}


///////////////////////////////////////////////////////
// https://github.com/digithree/quartz/blob/80778ca85db9d067d103b3ab21d8325ca98f37bc/quartz/styles/custom.scss
.page {
    max-width: unset;   
    font-size: 16;
    // font-family: Tahoma;
    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
    box-shadow: 0 0 150px var(--outline) inset;
}

body {
  font-weight: 200;
  font-size: 1.125rem;
  line-height: 1.6;
}

h1 { font-size: 2.0rem; }
h2 { font-size: 1.5rem; }
h3 { font-size: 1.0rem; }
h4 { font-size: 0.75rem; }

pre, code {
  font-size: 1rem !important;
  line-height: 1.6 !important;
  color: var(--darkgray) !important;
  //background-color: var(--lightgray) !important;
}

// --- Color Palette Correction ---

h1, h2 {
  color: var(--secondary);
}

h3, h4, h5, h6 {
  color: var(--tertiary);
}

// --- Other Adjustments ---

hr {
  border: none;
  height: 1px;
  background-color: var(--secondary);
  margin: 2rem auto;
  width: 60%;
  opacity: 0.5;
}
/* ... */

